Lowercase all json

--- a/sigsci_TA_for_splunk/default/props.conf
+++ b/sigsci_TA_for_splunk/default/props.conf
@@ -1,26 +1,29 @@
 [sigsci-events]
+INDEXED_EXTRACTIONS = JSON
+JSON_TRIM_BRACES_IN_ARRAY_NAMES = true
+SEDCMD-contacts = s/([A-Za-z]*)/\L\1/g
 KV_MODE = json
 LEARN_MODEL = 1
 SHOULD_LINEMERGE = 0
 TIME_PREFIX = created
 TIME_FORMAT = %Y-%m-%dT%H:%M:%S.%fZ
-category = Splunk App Add-on Builder
-pulldown_type = 1
 
 [sigsci-request]
+INDEXED_EXTRACTIONS = JSON
+JSON_TRIM_BRACES_IN_ARRAY_NAMES = true
+SEDCMD-contacts = s/([A-Za-z]*)/\L\1/g
 KV_MODE = json
 LEARN_MODEL = 1
 SHOULD_LINEMERGE = 0
 TIME_PREFIX = timestamp
 TIME_FORMAT = %Y-%m-%dT%H:%M:%SZ
-category = Splunk App Add-on Builder
-pulldown_type = 1
 
 [sigsci-activity]
+INDEXED_EXTRACTIONS = JSON
+JSON_TRIM_BRACES_IN_ARRAY_NAMES = true
+SEDCMD-contacts = s/([A-Za-z]*)/\L\1/g
 KV_MODE = json
 LEARN_MODEL = 1
 SHOULD_LINEMERGE = 0
 TIME_PREFIX = created
 TIME_FORMAT = %Y-%m-%dT%H:%M:%S.%fZ
-category = Splunk App Add-on Builder
-pulldown_type = 1
